[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/eod.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
z_index = 10
z_as_relative = false
script = ExtResource( 1 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = 8.0
margin_top = 112.0
margin_right = 496.0
margin_bottom = 187.0
window_title = "Unsupported Key"

[node name="Label2" type="Label" parent="AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 39.0
text = "A character you typed is not supported. 
For now, this program only supports characters in the US keyboard"

[node name="Decrypt_notification" type="AcceptDialog" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = 8.0
margin_top = 112.0
margin_right = 496.0
margin_bottom = 187.0
popup_exclusive = true
window_title = "Decrypted Text"

[node name="Label2" type="Label" parent="Decrypt_notification"]
margin_left = 8.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 39.0
text = "This is the text decrypted:"

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
